[package]
name = "limitd-rs"
version = "0.1.0"
authors = ["root"]

[dependencies]
env_logger = "0.3"
futures = { git = "https://github.com/alexcrichton/futures-rs", rev = "71801dc" }
futures-io = { git = "https://github.com/alexcrichton/futures-rs", rev = "71801dc" }
futures-mio = { git = "https://github.com/alexcrichton/futures-rs", rev = "71801dc" }
getopts = "0.2"
log = "0.3.6"
time = "0.1"
protobuf = "1.0.23"
