[package]
name = "limitd-rs"
version = "0.1.0"
authors = ["Sebastian Waisbrot"]

[dependencies]
env_logger = "0.3"
futures = { git = "https://github.com/alexcrichton/futures-rs", rev = "71801dc" }
futures-io = { git = "https://github.com/alexcrichton/futures-rs", rev = "71801dc" }
futures-mio = { git = "https://github.com/alexcrichton/futures-rs", rev = "71801dc" }
getopts = "0.2"
log = "0.3.6"
time = "0.1"
protobuf = "1.0.23"
net2 = { version = "0.2", default-features = false }
leveldb = "0.8.3"
db-key = "0.1.0"
